--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
       <div class="col-md-12">
         <nav class="text-center navbar navbar-default">
           <ul class="nav navbar-nav col-md-12">
-            <li class="nav-item col-md-3">
+            <li class="nav-item col-md-3 col-xs-6">
               <a class="nav-link" href="#"><img src="img/factory.svg" alt="">¿Sos una PyME?</a>
             </li>
-            <li class="nav-item col-md-3">
+            <li class="nav-item col-md-3 col-xs-6">
               <a class="nav-link" href="#"><img src="img/payment.svg" alt="">Línea de Financiamiento</a>
             </li>
-            <li class="nav-item col-md-3">
+            <li class="nav-item col-md-3 col-xs-6">
               <a class="nav-link" href="#"><img src="img/magnifying.svg" alt="">Precalificación crediticia</a>
             </li>
-            <li class="nav-item col-md-3">
+            <li class="nav-item col-md-3 col-xs-6">
               <a class="nav-link" href="#"><img src="img/calculator.svg" alt="">Simulador de cheques</a>
             </li>
           </ul>
