--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div style="display:inline-block;width:100%;overflow-y:auto;">
       <ul class="timeline timeline-horizontal">
         <li class="timeline-item">
-          <div class="timeline-badge primary"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge primary"><img src="img/building.svg" alt=""></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">SOCIOS PARTICIPES</h4>
@@ -122,7 +122,7 @@
           </div>
         </li>
         <li class="timeline-item">
-          <div class="timeline-badge success"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge success"><img src="img/document.svg" alt=""></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Auditor Externo y Asesores Impositivos</h4>
@@ -133,7 +133,7 @@
           </div>
         </li>
         <li class="timeline-item">
-          <div class="timeline-badge info"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge info"><img src="img/handshake.svg" alt=""></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Clasificación de Riesgo</h4>
@@ -144,7 +144,7 @@
           </div>
         </li>
         <li class="timeline-item">
-          <div class="timeline-badge danger"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge danger"><img src="img/payment.svg" alt=""></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">garantia</h4>
@@ -155,7 +155,7 @@
           </div>
         </li>
         <li class="timeline-item">
-          <div class="timeline-badge warning"><i class="glyphicon glyphicon-check"></i></div>
+          <div class="timeline-badge warning"><img src="img/team.svg" alt=""></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Entidad de Garantía Autorizada</h4>
